# interview_task

./: .env.local.example  .gitignore  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  test_songs.csv
.devcontainer/: devcontainer.json  docker-compose.yml  dockerfile
.github/workflows/: check.yml
migrations/: env.py
migrations/versions/: 82384ba81411_initial_db.py
src/zypl_interview/: __init__.py  config.py  database.py  exceptions.py  logger.py  main.py  routes.py
src/zypl_interview/auth/: jwt.py  schemas.py  utils.py
src/zypl_interview/integration/: email.py
src/zypl_interview/music/: injectors.py  models.py  repository.py  routes.py  schemas.py  service.py
src/zypl_interview/subscriptions/: injectors.py  models.py  repository.py  routes.py  schemas.py  service.py
src/zypl_interview/users/: injectors.py  models.py  repository.py  routes.py  schemas.py  service.py
staging/: docker-compose.yml  dockerfile
